tests/test_files/errors/dot_global.over
obj: {test: 5}
@test: 5

dot: obj.@test
